# miyubot

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
configs/: path_config.py
plugins/botfunction/plugins/help/: __init__.py  data_source.py
plugins/botfunction/plugins/manage/: __init__.py
plugins/pcr/: __init__.py  chara.py
plugins/pcr/pcr_data/: CHARA_NAME.json  CHARA_PROFILE.json  __init__.py
plugins/uma/: __init__.py  chara.py
plugins/uma/uma_data/: __init__.py  card_info_dict.json  chara_info_dict.json  dict_id_name.json  resources.py
plugins/uma/uma_res_data/: __init__.py  card_info_dict.json  chara_info_dict.json  dict_id_name.json  pool_data.json  uma_alias.json
resources/img/temp/: .gitignore
resources/pcr/voice_ci/: vo_ci_106401_001.m4a  vo_ci_106701_001.m4a  vo_ci_106801_001.m4a  vo_ci_118001_001.m4a  vo_ci_118101_001.m4a  vo_ci_118501_001.m4a
src/: __init__.py
src/plugins/: nonebot_guild_patch.py
src/plugins/aichat/: __init__.py  config.py  data_source.py
src/plugins/calendar/: __init__.py  config.py
src/plugins/help/: __init__.py  data_source.py
src/plugins/manage/: __init__.py  data_source.py
src/plugins/nonebot_plugin_apscheduler/: __init__.py
src/plugins/pcrgames/: __init__.py  _pcr_data.py  chara.py
src/plugins/pcrjjc/: __init__.py  config.py
src/plugins/rank/: __init__.py
src/plugins/rss/: __init__.py
src/plugins/upload_img/: __init__.py
src/plugins/whattoeat/: __init__.py  data_source.py
src/plugins/yaowoyizhi/: __init__.py  data_source.py
utils/: CD_Checker.py  R.py  __init__.py  aiorequests.py  base_config.py  check_iamge.py  config.py  img_check.py  img_check_baidu.py  img_check_qq.py  json_Manager.py  message_builder.py  rule.py  service.py  services.py  upload_bili.py  upload_oss.py
(+105 files in other folders)
