[project]
name = "miyubot"
version = "3.0.1"
description = "miyubot"
authors = ["liangzimiao <2968274386@qq.com>"]
readme = "README.md"
requires-python = "^3.10"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" },
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.poetry]
name = "miyubot"
version = "3.0.1"
description = "miyubot"
authors = ["liangzimiao <2968274386@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
nonebot2 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
